@@ -19,6 +19,7 @@
 - Font chooser for configuring the font settings
 - Option to add audio object to playlist after current audio object
 - Context panel redesign
+- Gui theme can be changed without restart
 - INTERNAL: Avoid unnecessary refresh view operations
 - INTERNAL: Share actions between play list and navigation tree and table
 - INTERNAL: Refactoring of play list
